@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the Final Cut widget toolkit                    *
 *                                                                      *
-* Copyright 2015-2017 Markus Gans                                      *
+* Copyright 2015-2018 Markus Gans                                      *
 *                                                                      *
 * The Final Cut is free software; you can redistribute it and/or       *
 * modify it under the terms of the GNU Lesser General Public License   *
@@ -98,6 +98,8 @@ class FSwitch : public FToggleButton
     // Methods
     void draw();
     void drawCheckButton();
+    void drawChecked();
+    void drawUnchecked();
 
     // Data Members
     int  switch_offset_pos;
