@@ -390,6 +390,8 @@ class FWidget : public FVTerm, public FObject
     void               KeyDownEvent (FKeyEvent*);
     void               processDestroy();
     virtual void       draw();
+    void               drawWindows();
+    void               drawChildren();
     void               drawTransparentShadow (int, int, int, int);
     void               drawBlockShadow (int, int, int, int);
     static void        setColorTheme();
