@@ -1,3 +1,6 @@
+2017-01-31  Markus Gans  <guru.mail@muenster.de>
+	* Refactoring FSwitch::drawCheckButton and FWidget::redraw 
+
 2017-01-30  Markus Gans  <guru.mail@muenster.de>
 	* Refactoring FLabel::draw
 	* Refactoring FFileDialog::readDir
